# nix-bindings-rust

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  nci.nix
.claude/: settings.local.json
.github/workflows/: build.yaml
dev/: flake-module.nix  flake.nix
development/: crates.js  help.html  index.html  settings.html  src-files.js
development/nix_bindings_bdwgc_sys/: all.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  constant.ADJ_TIMECONST.html  constant.BUS_ADRALN.html  constant.BUS_ADRERR.html  constant.BUS_MCEERR_AO.html  constant.BUS_MCEERR_AR.html  constant.BUS_OBJERR.html  constant.CLD_CONTINUED.html  constant.CLD_DUMPED.html  constant.CLD_EXITED.html  constant.CLD_KILLED.html  constant.CLD_STOPPED.html  constant.CLD_TRAPPED.html  constant.CLOCK_BOOTTIME.html  constant.CLOCK_BOOTTIME_ALARM.html  constant.CLOCK_MONOTONIC.html  constant.CLOCK_MONOTONIC_COARSE.html  constant.CLOCK_MONOTONIC_RAW.html  constant.CLOCK_PROCESS_CPUTIME_ID.html  constant.CLOCK_REALTIME.html  constant.CLOCK_REALTIME_ALARM.html  constant.CLOCK_REALTIME_COARSE.html  constant.CLOCK_TAI.html  constant.CLOCK_THREAD_CPUTIME_ID.html  constant.CLONE_CHILD_CLEARTID.html  constant.CLONE_CHILD_SETTID.html  constant.CLONE_DETACHED.html  constant.CLONE_FILES.html  (+1750 more)
development/nix_bindings_expr/: all.html  index.html  sidebar-items.js
development/nix_bindings_expr_sys/: all.html  constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT16_WIDTH.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT32_WIDTH.html  constant.INT64_WIDTH.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INT8_WIDTH.html  constant.INTMAX_WIDTH.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INTPTR_WIDTH.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST16_WIDTH.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST32_WIDTH.html  constant.INT_FAST64_WIDTH.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_FAST8_WIDTH.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  constant.INT_LEAST16_WIDTH.html  constant.INT_LEAST32_MAX.html  constant.INT_LEAST32_MIN.html  constant.INT_LEAST32_WIDTH.html  constant.INT_LEAST64_WIDTH.html  constant.INT_LEAST8_MAX.html  constant.INT_LEAST8_MIN.html  constant.INT_LEAST8_WIDTH.html  constant.PTRDIFF_MAX.html  constant.PTRDIFF_MIN.html  constant.PTRDIFF_WIDTH.html  constant.SIG_ATOMIC_MAX.html  constant.SIG_ATOMIC_MIN.html  (+294 more)
development/nix_bindings_fetchers/: all.html  index.html  sidebar-items.js  struct.FetchersSettings.html
development/nix_bindings_fetchers_sys/: all.html  fn.fetchers_settings_free.html  fn.fetchers_settings_new.html  index.html  sidebar-items.js  struct.fetchers_settings.html
development/nix_bindings_flake/: all.html  index.html  sidebar-items.js  struct.FlakeLockFlags.html  struct.FlakeReference.html  struct.FlakeReferenceParseFlags.html  struct.FlakeSettings.html  struct.LockedFlake.html  trait.EvalStateBuilderExt.html
development/nix_bindings_flake_sys/: all.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  constant.ADJ_TIMECONST.html  constant.BUS_ADRALN.html  constant.BUS_ADRERR.html  constant.BUS_MCEERR_AO.html  constant.BUS_MCEERR_AR.html  constant.BUS_OBJERR.html  constant.CLD_CONTINUED.html  constant.CLD_DUMPED.html  constant.CLD_EXITED.html  constant.CLD_KILLED.html  constant.CLD_STOPPED.html  constant.CLD_TRAPPED.html  constant.CLOCK_BOOTTIME.html  constant.CLOCK_BOOTTIME_ALARM.html  constant.CLOCK_MONOTONIC.html  constant.CLOCK_MONOTONIC_COARSE.html  constant.CLOCK_MONOTONIC_RAW.html  constant.CLOCK_PROCESS_CPUTIME_ID.html  constant.CLOCK_REALTIME.html  constant.CLOCK_REALTIME_ALARM.html  constant.CLOCK_REALTIME_COARSE.html  constant.CLOCK_TAI.html  constant.CLOCK_THREAD_CPUTIME_ID.html  constant.CLONE_CHILD_CLEARTID.html  constant.CLONE_CHILD_SETTID.html  constant.CLONE_DETACHED.html  constant.CLONE_FILES.html  (+1612 more)
development/nix_bindings_store/: all.html  index.html  sidebar-items.js
development/nix_bindings_store_sys/: all.html  constant.INT16_MAX.html  (+264 more)
nix-bindings-bdwgc-sys/: Cargo.toml  README.md
nix-bindings-bindgen-raw/: Cargo.toml
nix-bindings-expr/: Cargo.toml  README.md  build.rs
nix-bindings-expr-sys/: Cargo.toml  README.md
nix-bindings-expr-sys/src/: lib.rs
nix-bindings-expr/src/: eval_state.rs  primop.rs  value.rs
nix-bindings-expr/src/value/: __private.rs
nix-bindings-fetchers/: Cargo.toml  README.md
nix-bindings-fetchers-sys/: Cargo.toml  README.md
nix-bindings-fetchers/src/: lib.rs
nix-bindings-flake/: Cargo.toml  README.md
nix-bindings-flake-sys/: Cargo.toml  README.md
nix-bindings-flake-sys/src/: lib.rs
nix-bindings-flake/src/: lib.rs
nix-bindings-store/: Cargo.toml  README.md  build.rs
nix-bindings-store-harmonia/: Cargo.toml  build.rs
nix-bindings-store-harmonia/src/: lib.rs
nix-bindings-store-sys/: Cargo.toml  README.md  build.rs
nix-bindings-store-sys/src/: lib.rs
nix-bindings-store/src/: derivation.rs  path.rs  store.rs
nix-bindings-store/src/derivation/: mod.rs
nix-bindings-store/src/path/: mod.rs
nix-bindings-util/: Cargo.toml  README.md
nix-bindings-util-sys/: Cargo.toml  README.md  build.rs
nix-bindings-util-sys/src/: lib.rs
nix-bindings-util/src/: context.rs  lib.rs  nix_version.rs  settings.rs  string_return.rs
rust/: Cargo.toml  nci.nix
rust/nix-bindings-store/: Cargo.toml  build.rs
rust/nix-bindings-store/src/: derivation.rs  path.rs  store.rs
(+673 files in other folders)
