[package]
name = "nix-bindings-expr-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "LGPL-2.1"

[lib]
path = "src/lib.rs"

[dependencies]
nix-bindings-util-sys = { path = "../nix-bindings-util-sys" }
nix-bindings-store-sys = { path = "../nix-bindings-store-sys" }

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
