[package]
name = "nix-bindings-expr"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"
description = "Rust bindings to Nix expression evaluator"
repository = "https://github.com/nixops4/nix-bindings-rust"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
nix-bindings-store = { path = "../nix-bindings-store", version = "0.1.0" }
nix-bindings-util = { path = "../nix-bindings-util", version = "0.1.0" }
nix-bindings-util-sys = { path = "../nix-bindings-util-sys", version = "0.1.0" }
lazy_static = "1.4"
ctor = "0.2"
tempfile = "3.10"
cstr = "0.2"

[lints.rust]
warnings = "deny"
dead-code = "allow"

[lints.clippy]
type-complexity = "allow"
# We're still trying to make Nix more thread-safe, want forward-compat
arc-with-non-send-sync = "allow"
