[package]
name = "nix-bindings-fetchers"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
nix-bindings-store = { path = "../nix-bindings-store" }
nix-bindings-util = { path = "../nix-bindings-util" }
nix-bindings-bindgen-raw = { path = "../nix-bindings-bindgen-raw" }
ctor = "0.2"
tempfile = "3.10"
cstr = "0.2"

[lints]
workspace = true
