[package]
name = "nix-bindings-flake"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
nix-bindings-expr = { path = "../nix-bindings-expr" }
nix-bindings-fetchers = { path = "../nix-bindings-fetchers" }
nix-bindings-store = { path = "../nix-bindings-store" }
nix-bindings-util = { path = "../nix-bindings-util" }
nix-bindings-bindgen-raw = { path = "../nix-bindings-bindgen-raw" }
lazy_static = "1.4"
ctor = "0.2"
tempfile = "3.10"
cstr = "0.2"

[lints.rust]
warnings = "deny"
dead-code = "allow"

[lints.clippy]
type-complexity = "allow"
# We're still trying to make Nix more thread-safe, want forward-compat
arc-with-non-send-sync = "allow"
