[package]
name = "nix-bindings-store-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "LGPL-2.1"

[lib]
path = "src/lib.rs"

[dependencies]
nix-bindings-util-sys = { path = "../nix-bindings-util-sys" }
zerocopy = { version = "0.8", features = ["derive"] }

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
