[package]
name = "nix-bindings-store"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "LGPL-2.1"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
nix-bindings-util = { path = "../nix-bindings-util" }
nix-bindings-util-sys = { path = "../nix-bindings-util-sys" }
nix-bindings-store-sys = { path = "../nix-bindings-store-sys" }
lazy_static = "1.4"
zerocopy = "0.8"
serde_json = "1.0"

[dev-dependencies]
ctor = "0.2"
tempfile = "3.10"
harmonia-store-core = { git = "https://github.com/nix-community/harmonia.git" }
nix-bindings-store-harmonia = { path = "../nix-bindings-store-harmonia" }

[build-dependencies]
pkg-config = "0.3"
# Needed for version parsing in build.rs
nix-bindings-util = { path = "../nix-bindings-util" }

[lints.rust]
warnings = "deny"
dead-code = "allow"

[lints.clippy]
type-complexity = "allow"
# We're still trying to make Nix more thread-safe, want forward-compat
arc-with-non-send-sync = "allow"
