[package]
name = "nix-bindings-store"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "LGPL-2.1"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
nix-bindings-util = { path = "../nix-bindings-util" }
nix-bindings-bindgen-raw = { path = "../nix-bindings-bindgen-raw" }
lazy_static = "1.4"

[dev-dependencies]
ctor = "0.2"
tempfile = "3.10"

[build-dependencies]
pkg-config = "0.3"
# Needed for version parsing in build.rs
nix-bindings-util = { path = "../nix-bindings-util" }
