[package]
name = "nix-bindings-util-sys"
version = "0.2.1"
edition = "2021"
build = "build.rs"
license = "LGPL-2.1"
description = "Low-level FFI bindings to Nix utility library"
repository = "https://github.com/nixops4/nix-bindings-rust"
documentation = "https://nixops4.github.io/nix-bindings-rust/development/nix_bindings_util_sys/"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
